examples/test/testpolicy711.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy711
  namespace: namespace464
spec:
  podSelector:
    matchLabels:
      key30: value46
      key8: value12
      key46: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value48
      podSelector:
        matchLabels:
          key28: value34
          key45: value3
          key41: value27
